serverResponse.log
/Users/paoladeleon/Documents/U/8Semestre/Redes/XMPP_Client/xmppClient.js:30
        await this.manejarPresencia(stanza);
        ^^^^^

SyntaxError: await is only valid in async functions and the top level bodies of modules
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1032:15)
    at Module._compile (node:internal/modules/cjs/loader:1067:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1157:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/paoladeleon/Documents/U/8Semestre/Redes/XMPP_Client/main.js:2:20)
    at Module._compile (node:internal/modules/cjs/loader:1103:14)
